package grpc_contracts

import (
	"context"
	"testing"
	"time"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"
	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"

	// Import generated protobuf clients (will be generated in T019-T027)
	// graphpb "aegisshield/shared/proto/graph-engine"
)

// T014: Graph Engine Service gRPC Contract Tests
// Constitutional Principle: Comprehensive Testing - Write failing tests first

func TestGraphEngineService_ExecuteQuery_ShouldFailInitially(t *testing.T) {
	// This test MUST fail initially - we haven't implemented the service yet
	// Following TDD: Red -> Green -> Refactor
	
	t.Skip("INTENTIONALLY FAILING: Graph Engine Service not implemented yet (T014)")
	
	// Arrange
	conn, err := grpc.Dial("graph-engine:9004", grpc.WithInsecure())
	require.NoError(t, err, "Should connect to graph engine service")
	defer conn.Close()
	
	// client := graphpb.NewGraphEngineServiceClient(conn)
	ctx, cancel := context.WithTimeout(context.Background(), 30*time.Second)
	defer cancel()
	
	// Act & Assert
	t.Run("should execute Cypher query for transaction paths", func(t *testing.T) {
		// Test path finding queries - FR-015 from spec
		request := &graphpb.ExecuteQueryRequest{
			Query: `
				MATCH p = (sender:Person {entity_id: $sender_id})-[r:TRANSFERRED_TO*1..5]->(receiver:Person {entity_id: $receiver_id})
				WHERE ALL(rel IN r WHERE rel.amount > $min_amount)
				RETURN p, 
				       length(p) as path_length,
				       reduce(total = 0, rel IN r | total + rel.amount) as total_amount
				ORDER BY path_length ASC
				LIMIT $max_results
			`,
			Parameters: map[string]interface{}{
				"sender_id":   "entity-123",
				"receiver_id": "entity-456",
				"min_amount":  1000.0,
				"max_results": 10,
			},
			QueryType: graphpb.QueryType_PATHFINDING,
			Timeout:   "30s",
		}
		
		// response, err := client.ExecuteQuery(ctx, request)
		// assert.NoError(t, err, "Should execute Cypher query successfully")
		// assert.NotEmpty(t, response.QueryId, "Should return query ID")
		// assert.LessOrEqual(t, response.ExecutionTimeMs, int64(30000), "Should complete within timeout")
		// 
		// if len(response.Results) > 0 {
		//     for _, result := range response.Results {
		//         assert.NotEmpty(t, result.Path, "Should include path data")
		//         assert.GreaterOrEqual(t, result.PathLength, int32(1), "Should have valid path length")
		//         assert.GreaterOrEqual(t, result.TotalAmount, 1000.0, "Should meet minimum amount filter")
		//     }
		// }
	})
	
	t.Run("should find suspicious transaction networks", func(t *testing.T) {
		// Test network analysis - FR-016 from spec
		request := &graphpb.NetworkAnalysisRequest{
			CenterEntityId: "entity-789",
			AnalysisType:   graphpb.AnalysisType_SUSPICIOUS_NETWORKS,
			Parameters: &graphpb.AnalysisParameters{
				MaxDepth:        3,
				MinConnections:  5,
				TimeWindow:     "30d",
				AmountThreshold: 50000.0,
				RiskFactors: []graphpb.RiskFactor{
					graphpb.RiskFactor_HIGH_RISK_GEOGRAPHY,
					graphpb.RiskFactor_CASH_INTENSIVE_BUSINESS,
					graphpb.RiskFactor_SHELL_COMPANY_INDICATORS,
				},
			},
		}
		
		// response, err := client.AnalyzeNetwork(ctx, request)
		// assert.NoError(t, err, "Should analyze network successfully")
		// assert.NotEmpty(t, response.AnalysisId, "Should return analysis ID")
		// assert.GreaterOrEqual(t, response.RiskScore, 0.0, "Should have valid risk score")
		// assert.LessOrEqual(t, response.RiskScore, 1.0, "Should have valid risk score")
		// 
		// if response.SuspiciousPatterns > 0 {
		//     assert.NotEmpty(t, response.DetectedPatterns, "Should include detected patterns")
		//     for _, pattern := range response.DetectedPatterns {
		//         assert.NotEmpty(t, pattern.PatternType, "Should specify pattern type")
		//         assert.GreaterOrEqual(t, pattern.ConfidenceScore, 0.6, "Should meet confidence threshold")
		//         assert.NotEmpty(t, pattern.InvolvedEntities, "Should include involved entities")
		//     }
		// }
	})
	
	t.Run("should perform centrality analysis", func(t *testing.T) {
		// Test centrality metrics - FR-017 from spec
		request := &graphpb.CentralityAnalysisRequest{
			Subgraph: &graphpb.SubgraphFilter{
				EntityTypes:   []string{"Person", "Organization"},
				TimeWindow:   "90d",
				MinAmount:    1000.0,
				Countries:    []string{"US", "GB", "CH", "LU"}, // High-risk countries
			},
			CentralityMetrics: []graphpb.CentralityMetric{
				graphpb.CentralityMetric_BETWEENNESS,
				graphpb.CentralityMetric_DEGREE,
				graphpb.CentralityMetric_PAGERANK,
				graphpb.CentralityMetric_EIGENVECTOR,
			},
			TopN: 50, // Top 50 most central entities
		}
		
		// response, err := client.AnalyzeCentrality(ctx, request)
		// assert.NoError(t, err, "Should analyze centrality successfully")
		// assert.NotEmpty(t, response.AnalysisId, "Should return analysis ID")
		// assert.LessOrEqual(t, len(response.CentralEntities), 50, "Should respect TopN limit")
		// 
		// for _, entity := range response.CentralEntities {
		//     assert.NotEmpty(t, entity.EntityId, "Should include entity ID")
		//     assert.GreaterOrEqual(t, entity.BetweennessCentrality, 0.0, "Should have valid betweenness score")
		//     assert.GreaterOrEqual(t, entity.DegreeCentrality, 0, "Should have valid degree score")
		//     assert.GreaterOrEqual(t, entity.PageRankScore, 0.0, "Should have valid PageRank score")
		// }
	})
}

func TestGraphEngineService_StreamingQueries_ShouldFailInitially(t *testing.T) {
	t.Skip("INTENTIONALLY FAILING: Graph Engine Service not implemented yet (T014)")
	
	conn, err := grpc.Dial("graph-engine:9004", grpc.WithInsecure())
	require.NoError(t, err)
	defer conn.Close()
	
	// client := graphpb.NewGraphEngineServiceClient(conn)
	ctx := context.Background()
	
	t.Run("should handle streaming graph updates", func(t *testing.T) {
		// Test real-time graph updates - scalability principle
		// stream, err := client.StreamGraphUpdates(ctx)
		// require.NoError(t, err, "Should establish streaming connection")
		
		// Send batch of graph updates
		updates := []*graphpb.GraphUpdate{
			{
				UpdateType: graphpb.UpdateType_ADD_NODE,
				NodeData: &graphpb.NodeData{
					EntityId:   "entity-new-001",
					Labels:     []string{"Person", "HighRisk"},
					Properties: map[string]string{
						"name":        "Suspicious Entity",
						"risk_score":  "0.85",
						"created_at":  time.Now().Format(time.RFC3339),
					},
				},
			},
			{
				UpdateType: graphpb.UpdateType_ADD_RELATIONSHIP,
				RelationshipData: &graphpb.RelationshipData{
					FromEntityId: "entity-new-001",
					ToEntityId:   "entity-456",
					RelationType: "TRANSFERRED_TO",
					Properties: map[string]string{
						"amount":     "75000.00",
						"currency":   "USD",
						"timestamp":  time.Now().Format(time.RFC3339),
						"risk_flags": "large_amount,cross_border",
					},
				},
			},
		}
		
		// for _, update := range updates {
		//     err := stream.Send(update)
		//     assert.NoError(t, err, "Should send graph update successfully")
		// }
		
		// response, err := stream.CloseAndRecv()
		// assert.NoError(t, err, "Should complete streaming updates")
		// assert.Equal(t, int32(len(updates)), response.UpdatesProcessed, "Should process all updates")
		// assert.LessOrEqual(t, response.ProcessingTimeMs, int64(5000), "Should complete efficiently")
	})
	
	t.Run("should stream query results for large datasets", func(t *testing.T) {
		// Test streaming large result sets - performance principle
		request := &graphpb.StreamQueryRequest{
			Query: `
				MATCH (n:Person)-[r:TRANSFERRED_TO]->(m:Person)
				WHERE r.amount > 1000
				RETURN n.entity_id, r.amount, m.entity_id, r.timestamp
				ORDER BY r.timestamp DESC
			`,
			BatchSize: 1000, // Stream 1000 results at a time
			QueryType: graphpb.QueryType_LARGE_RESULT_SET,
		}
		
		// stream, err := client.StreamQuery(ctx, request)
		// require.NoError(t, err, "Should establish query stream")
		
		totalResults := 0
		// for {
		//     response, err := stream.Recv()
		//     if err == io.EOF {
		//         break
		//     }
		//     assert.NoError(t, err, "Should receive query results")
		//     assert.LessOrEqual(t, len(response.Results), 1000, "Should respect batch size")
		//     totalResults += len(response.Results)
		// }
		
		// assert.GreaterOrEqual(t, totalResults, 0, "Should receive some results")
	})
}

func TestGraphEngineService_GraphOptimization_ShouldFailInitially(t *testing.T) {
	t.Skip("INTENTIONALLY FAILING: Graph Engine Service not implemented yet (T014)")
	
	conn, err := grpc.Dial("graph-engine:9004", grpc.WithInsecure())
	require.NoError(t, err)
	defer conn.Close()
	
	// client := graphpb.NewGraphEngineServiceClient(conn)
	ctx := context.Background()
	
	t.Run("should optimize query performance", func(t *testing.T) {
		// Test query optimization - performance principle
		request := &graphpb.OptimizeQueryRequest{
			Query: `
				MATCH (a:Person)-[:TRANSFERRED_TO*2..4]->(b:Person)
				WHERE a.country = 'US' AND b.country = 'CH'
				AND ALL(r IN relationships(path) WHERE r.amount > 10000)
				RETURN path, sum([r IN relationships(path) | r.amount]) as total
				ORDER BY total DESC
				LIMIT 100
			`,
			OptimizationLevel: graphpb.OptimizationLevel_AGGRESSIVE,
			TargetLatency:     "5s",
		}
		
		// response, err := client.OptimizeQuery(ctx, request)
		// assert.NoError(t, err, "Should optimize query successfully")
		// assert.NotEmpty(t, response.OptimizedQuery, "Should return optimized query")
		// assert.NotEmpty(t, response.ExecutionPlan, "Should include execution plan")
		// assert.LessOrEqual(t, response.EstimatedLatencyMs, int64(5000), "Should meet target latency")
		// 
		// // Verify optimization suggestions
		// if len(response.OptimizationSuggestions) > 0 {
		//     for _, suggestion := range response.OptimizationSuggestions {
		//         assert.NotEmpty(t, suggestion.Type, "Should specify optimization type")
		//         assert.NotEmpty(t, suggestion.Description, "Should include description")
		//         assert.GreaterOrEqual(t, suggestion.EstimatedImprovement, 0.0, "Should estimate improvement")
		//     }
		// }
	})
	
	t.Run("should manage graph indexes", func(t *testing.T) {
		// Test index management - performance principle
		request := &graphpb.ManageIndexRequest{
			Operation: graphpb.IndexOperation_CREATE,
			IndexDefinition: &graphpb.IndexDefinition{
				Name:       "entity_id_index",
				Labels:     []string{"Person", "Organization"},
				Properties: []string{"entity_id"},
				IndexType:  graphpb.IndexType_BTREE,
			},
		}
		
		// response, err := client.ManageIndex(ctx, request)
		// assert.NoError(t, err, "Should manage index successfully")
		// assert.True(t, response.Success, "Should successfully create index")
		// assert.NotEmpty(t, response.IndexName, "Should return index name")
	})
	
	t.Run("should validate graph consistency", func(t *testing.T) {
		// Test data integrity - constitutional principle
		request := &graphpb.ValidateConsistencyRequest{
			ValidationRules: []graphpb.ValidationRule{
				graphpb.ValidationRule_NO_ORPHANED_NODES,
				graphpb.ValidationRule_REFERENTIAL_INTEGRITY,
				graphpb.ValidationRule_CONSTRAINT_VIOLATIONS,
			},
			IncludeDetails: true,
		}
		
		// response, err := client.ValidateConsistency(ctx, request)
		// assert.NoError(t, err, "Should validate consistency successfully")
		// assert.NotEmpty(t, response.ValidationId, "Should return validation ID")
		// 
		// if response.ViolationsFound > 0 {
		//     assert.NotEmpty(t, response.Violations, "Should include violation details")
		//     for _, violation := range response.Violations {
		//         assert.NotEmpty(t, violation.ViolationType, "Should specify violation type")
		//         assert.NotEmpty(t, violation.Description, "Should include description")
		//         assert.NotEmpty(t, violation.AffectedEntities, "Should list affected entities")
		//     }
		// }
	})
}